add css to better align main h1

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -41,7 +41,10 @@ header a:hover{
 header h1 {
   font-size: 90px;
   color: #543c6e;
-  margin: 135px auto 135px 25%;
+  /*margin: 135px auto 135px 25%;*/
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 5%;
   display: inline-block;
   border: 5px solid #543c6e;
   padding: 15px;
